# space-pirates-test-client

./: Cargo.toml  build.rs
src/: main.rs
